--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style type="text/css">
     
     body {
-        background: #3d346b;
+        background: #171717;
     }
 
     .container {
